# Round_3

rd3_ws/install/: local_setup.sh  setup.sh
rd3_ws/install/lumi_r3/lib/lumi_r3/: apriltag_detector.py
rd3_ws/install/lumi_r3/share/lumi_r3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rd3_ws/install/lumi_r3/share/lumi_r3/cmake/: lumi_r3Config.cmake
rd3_ws/install/lumi_r3/share/lumi_r3/launch/: r3_challenge.launch.py
rd3_ws/install/mini_r1_v1_description/share/ament_index/resource_index/parent_prefix_path/: mini_r1_v1_description
rd3_ws/install/mini_r1_v1_description/share/mini_r1_v1_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rd3_ws/install/mini_r1_v1_description/share/mini_r1_v1_description/urdf/: lidar.xacro
rd3_ws/install/mini_r1_v1_gz/share/mini_r1_v1_gz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rd3_ws/install/mini_r1_v1_gz/share/mini_r1_v1_gz/cmake/: mini_r1_v1_gzConfig.cmake
rd3_ws/log/: latest_build
rd3_ws/src/lumi_r3/: CMakeLists.txt  package.xml
rd3_ws/src/lumi_r3/config/: ekf_r3.yaml  slam_r3.yaml
rd3_ws/src/lumi_r3/launch/: r3_challenge.launch.py
rd3_ws/src/lumi_r3/lumi_r3/: grid_navigator.py  tile_detector.py
rd3_ws/src/lumi_r3/rviz/: r3_challenge.rviz
rd3_ws/src/lumi_r3/worlds/: grid_world_r3.sdf
rd3_ws/src/mini_r1_v1_description/urdf/: gazebo_control.xacro
rd3_ws/src/mini_r1_v1_gz/launch/: sim.launch.py
(+2 files in other folders)
