<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lumi_r3</name>
  <version>1.0.0</version>
  <description>LUMI Round 3 — AprilTag Grid Navigation | MAHE Mobility Challenge 2026</description>
  <maintainer email="lumi@gmit.edu.in">Rino</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>robot_localization</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>twist_stamper</depend>
  <depend>rviz2</depend>
  <depend>mini_r1_v1_description</depend>
  <depend>mini_r1_v1_gz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
